k8s-apps/01-setup/minio/minio-console-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP  
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - mopr.<<VAR_CERT_CLUSTER_DOMAIN>>
      secretName: minio-operator-cert
  rules:
    - host: mopr.<<VAR_CERT_CLUSTER_DOMAIN>>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  number: 9090
